# Claude-Code-Practice

./: .env.example  .gitignore  CLAUDE.md  README.md  SKYMIND_PROJECT.md  docker-compose.yml  file::memory:
.claude/: settings.local.json
backend/: alembic.ini  config.py  file::memory:  main.py  requirements.txt
backend/ai/: cpp_bridge.py
backend/ai/llm/: __init__.py  briefing.py  client.py  controller.py  parser.py
backend/db/: __init__.py  crud.py  database.py  orm_models.py
backend/models/: __init__.py  airspace.py  chat.py  common.py  drone.py  flight_plan.py  metrics.py  telemetry.py  waypoint.py
backend/simulator/: drone_sim.py  multi_drone.py  scenario.py
cpp_engine/: CMakeLists.txt
cpp_engine/bindings/: module.cpp
cpp_engine/include/skymind/: astar.h  geometry.h  optimizer.h  rrt_star.h  types.h
cpp_engine/src/: astar.cpp  geometry.cpp  optimizer.cpp  rrt_star.cpp
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
tests/backend/: conftest.py  test_airspace.py  test_api_routes.py  test_avoidance.py  test_chat_api.py  test_cpa.py  test_cpp_engine.py  test_drone_sim.py  test_emergency.py  test_emergency_landing.py  test_llm_briefing.py  test_llm_controller.py  test_llm_parser.py  test_metrics.py  test_multi_drone.py  test_multi_drone_daa.py  test_notam.py  test_path_engine.py  test_rl_agent.py  test_rl_environment.py  test_rrt_star.py  test_scenario.py  test_strategic.py  test_tactical.py  test_weather.py  test_weather_rerouter.py  test_websocket_telemetry.py  test_ws_multi.py
(+59 files in other folders)
